# omni-bot-plugins-oss

./: .gitattributes  README.md
bot-check-plugin/: pyproject.toml
bot-check-plugin/src/bot_check_plugin/: main.py
chat-context-plugin/: pyproject.toml
chat-context-plugin/src/chat_context_plugin/: main.py
image-plugin/: pyproject.toml
image-plugin/src/image_plugin/: main.py
openai-bot-plugin/: README.md  pyproject.toml
openai-bot-plugin/src/openai_bot_plugin/: main.py
pat-plugin/: pyproject.toml
pat-plugin/src/pat_plugin/: main.py
video-plugin/: pyproject.toml
video-plugin/src/video_plugin/: main.py
welcome-plugin/: pyproject.toml  test_username_extraction.py
welcome-plugin/src/welcome_plugin/: main.py
